# ros2_rust_mockup

./: README.md
geometry_msgs_rs/: CMakeLists.txt  Cargo.toml  build.rs  package.xml
my_node/: Cargo.toml
my_node/src/: main.rs
rcl-sys/: Cargo.toml  build.rs
